app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-tracker-app
  namespace: nimesh-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fitness-tracker-app
  strategy:
    type: RollingUpdate
    rollingUpdates:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: fitness-tracker-app
      # annotations:
      #   ad.datadoghq.com/fitness-tracker-app.logs: >-
      #     [{"source":"nodejs","service":"fitness-tracker-service"},
      #      {"source":"nodejs","service":"fitness-tracker-app"}]
    spec:
      containers:
        - name: fitness-tracker-app
          image: pulkit197/fitness_tracker-master-copy3-fitness-app:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
          # ✔ All configMap vars removed
          # ✔ Direct env variables added
---

apiVersion: v1
kind: Service
metadata:
  name: fitness-tracker-service
  namespace: nimesh-ns
spec:
  selector:
    app: fitness-tracker-app
  ports:
  - port: 80
    targetPort: 5000
  type: NodePort
